# stellar-notification-bot

./: .env_example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: bot.py  config.py  db.py  monitor_ledger.py  send_notification.py
